pressing enter, shift+enter, or clicking on send all have correct behaviors when sending message

--- a/src/components/chatroom/chatroomMessages/index.scss
+++ b/src/components/chatroom/chatroomMessages/index.scss
@@ -109,6 +109,7 @@
       padding: 7px;
       position: relative;
       word-break: keep-all;
+      white-space: pre-line;
 
       &:after {
         position: absolute;
